test/fail/integration/_fail_grammar_decl_value_1.hs
x :: Int
x = jal
main = print "hello"